# cnn-audio-classifier

./: README.md  app.py  model.py  pyproject.toml  train.py
models/tensorboard_logs/run_20260310_170851/: events.out.tfevents.1773173331.192.168.1.37.73659.0
