[project]
name = "cnn-audio-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "librosa>=0.11.0",
    "pandas",
    "requests>=2.32.5",
    "setuptools>=82.0.0",
    "soundfile",
    "tensorboard",
    "torch",
    "torchaudio",
    "torchmetrics>=1.9.0",
    "tqdm",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ruff>=0.15.4",
    "taskipy>=1.14.1",
    "typos>=1.44.0",
]

[tool.taskipy.tasks]
pre_lint = 'typos'
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'


[tool.hatch.build.targets.wheel]
packages = ["fast_zero"]
